# branchdiff

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  cliff.toml  clippy.toml  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
benches/: performance.rs
examples/: generate_assets.rs
scripts/: profile.py
src/: app.rs  cli.rs  diff.rs  external.rs  file_events.rs  file_links.rs  git.rs  gitignore.rs  html.rs  image_diff.rs  input.rs  lib.rs  limits.rs  main.rs  message.rs  output.rs  patch.rs  print.rs  test_support.rs  ui.rs  update.rs
src/app/: collapse.rs  frame.rs  mod.rs  navigation.rs  refresh.rs  search.rs  selection.rs  view_mode.rs  view_state.rs
src/diff/: algorithm.rs  block.rs  cancellation.rs  inline.rs  line_builder.rs  mod.rs  output.rs  provenance.rs
src/syntax/: mod.rs  theme.rs
src/ui/: colors.rs  diff_view.rs  image_view.rs  mod.rs  modals.rs  selection.rs  spans.rs  status_bar.rs  wrapping.rs
src/ui/modals/: help.rs  mod.rs  warning.rs
src/update/: file_change.rs  input.rs  mod.rs  recovery.rs  refresh.rs  search.rs
src/vcs/: git.rs  jj.rs  mod.rs  shared.rs  types.rs
src/vcs/git/: changed_files.rs  commands.rs  mod.rs  refresh.rs  tests.rs
tests/integration/: main.rs
tests/integration/harness/: mod.rs  repo.rs  session.rs
