[package]
name = "branchdiff"
version = "0.1.0"
edition = "2021"
description = "Terminal UI showing unified diff of current branch vs main/master"
license = "UNLICENSED"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
notify = "7"
notify-debouncer-mini = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
similar = { version = "2", features = ["inline"] }
arboard = "2"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
insta = "1"
proptest = "1.5"
assert_cmd = "2"
predicates = "3"

[lints.clippy]
# Enforce enums over boolean state flags
struct-excessive-bools = "deny"
fn-params-excessive-bools = "deny"

# Catch boolean patterns that could benefit from enums
match_bool = "warn"
bool_to_int_with_if = "warn"

# Complexity limits to catch functions that need refactoring
cognitive-complexity = "warn"
too-many-lines = "warn"

# Already-default lints we want to keep enforced (tightened to deny)
collapsible-if = "deny"
too-many-arguments = "deny"

# Encourage idiomatic patterns
needless-range-loop = "deny"
extend_with_drain = "deny"
